bk_ida/gccida/c2/merge_blocks_nomove
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:997:4: error: expected ';' after expression
rtx v9; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:997:5: error: use of undeclared identifier 'v9'
rtx v9; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1002:4: error: expected ';' after expression
rtx v14; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1002:5: error: use of undeclared identifier 'v14'
rtx v14; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1043:1: error: use of undeclared identifier 'v9'
v9 = ( rtx)v5[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1044:17: error: use of undeclared identifier 'v9'
if ( *( _WORD *)v9 == 37 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1046:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64)v5[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1051:12: error: expected ')'
if ( ( rtx)v10 == a->head ) 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1051:4: note: to match this '('
if ( ( rtx)v10 == a->head ) 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1062:1: error: use of undeclared identifier 'v9'
v9 = a->end; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1084:12: error: expected expression
*( _OWORD *)&b->pred = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1084:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&b->pred = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1090:1: error: use of undeclared identifier 'v14'
v14 = delete_insn( v5); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1092:1: error: use of undeclared identifier 'v14'
v14 = v5[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1094:6: error: use of undeclared identifier 'v14'
v5 = v14; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1099:7: error: use of undeclared identifier 'v9'
end = v9; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1106:9: error: use of undeclared identifier 'v9'
while ( v9 != end ) 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1108:7: error: use of undeclared identifier 'v9'
v18 = v9->fld[0].rtint; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1115:1: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/cfgrtl.c:1115:6: error: use of undeclared identifier 'v9'
v9 = v9[1].fld[0].rtx; 
     ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/merge_blocks_nomove/src/obj/cfgrtl.o] Error 1
